--- a/src/main/resources/cllient/ultimatepksmash/registration-view.fxml
+++ b/src/main/resources/cllient/ultimatepksmash/registration-view.fxml
@@ -5,7 +5,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="539.0" prefWidth="755.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cllient.ultimatepksmash.gui.login.RegistrationController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="539.0" prefWidth="755.0" xmlns="http://javafx.com/javafx/21" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cllient.ultimatepksmash.gui.login.RegistrationController">
    <children>
       <Label layoutX="265.0" layoutY="95.0" prefHeight="78.0" prefWidth="226.0" text="Username" />
       <Label layoutX="265.0" layoutY="203.0" prefHeight="78.0" prefWidth="226.0" text="E-mail" />
@@ -15,5 +15,6 @@
       <TextField fx:id="password" layoutX="342.0" layoutY="346.0" />
       <Button fx:id="registerButton" layoutX="385.0" layoutY="429.0" mnemonicParsing="false" onMouseClicked="#registerUser" prefHeight="45.0" prefWidth="149.0" text="Register" />
       <Button fx:id="backButton" layoutX="199.0" layoutY="429.0" mnemonicParsing="false" onMouseClicked="#goBack" prefHeight="45.0" prefWidth="132.0" text="Back" />
+      <Label fx:id="error" layoutX="359.0" layoutY="161.0" prefHeight="25.0" prefWidth="116.0" text="Label" textFill="RED" visible="false" />
    </children>
 </AnchorPane>
