--- a/src/main/resources/cllient/ultimatepksmash/arena-view.fxml
+++ b/src/main/resources/cllient/ultimatepksmash/arena-view.fxml
@@ -37,6 +37,6 @@
       <Button fx:id="attackButton3" layoutX="90.0" layoutY="715.0" mnemonicParsing="false" onMouseClicked="#handleAttackButton3" prefHeight="62.0" prefWidth="128.0" text="ATTACK" />
       <Button fx:id="defenceButton2" layoutX="758.0" layoutY="686.0" mnemonicParsing="false" onMouseClicked="#handleButtonDefence2" prefHeight="62.0" prefWidth="128.0" text="DEFENCE" />
       <Button fx:id="defenceButton1" layoutX="758.0" layoutY="566.0" mnemonicParsing="false" onMouseClicked="#handleButtonDefence1" prefHeight="62.0" prefWidth="128.0" text="DEFENCE" />
-      <Label fx:id="timerLabel" layoutX="523.0" layoutY="89.0" prefHeight="36.0" prefWidth="102.0" text="Timer" />
+      <Button fx:id="test" layoutX="706.0" layoutY="453.0" mnemonicParsing="false" onMouseClicked="#handleServerResponse" text="Button" />
    </children>
 </AnchorPane>
