--- a/src/main/resources/cllient/ultimatepksmash/lobby1v1.fxml
+++ b/src/main/resources/cllient/ultimatepksmash/lobby1v1.fxml
@@ -4,9 +4,9 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="463.0" prefWidth="770.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" >
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="463.0" prefWidth="770.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
-      <Label layoutX="207.0" layoutY="206.0" text="Waitnig for battle to start">
+      <Label layoutX="207.0" layoutY="206.0" text="Waiting for battle to start">
          <font>
             <Font size="35.0" />
          </font>
