--- a/src/main/resources/cllient/ultimatepksmash/arena-view.fxml
+++ b/src/main/resources/cllient/ultimatepksmash/arena-view.fxml
@@ -10,7 +10,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1223.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="cllient.ultimatepksmash.gui.arena.ArenaController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="840.0" prefWidth="1223.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1">
    <children>
       <ProgressBar fx:id="progressBar1" layoutX="78.0" layoutY="97.0" prefHeight="36.0" prefWidth="307.0" progress="0.0" />
       <ProgressBar fx:id="progressBar2" layoutX="803.0" layoutY="97.0" prefHeight="36.0" prefWidth="314.0" progress="0.0" />
@@ -29,14 +29,17 @@
             <Font size="36.0" />
          </font>
       </Text>
-      <TextArea fx:id="attack1Description" layoutX="283.0" layoutY="535.0" prefHeight="62.0" prefWidth="170.0" />
-      <Label fx:id="attack1Dmg" layoutX="464.0" layoutY="541.0" prefHeight="48.0" prefWidth="90.0" text="DMG" />
-      <Label fx:id="attack1Type" layoutX="572.0" layoutY="547.0" prefHeight="36.0" prefWidth="90.0" text="typ" />
+      <TextArea fx:id="attack1Description" layoutX="283.0" layoutY="535.0" prefHeight="62.0" prefWidth="372.0" />
       <Button fx:id="attackButton1" layoutX="88.0" layoutY="537.0" mnemonicParsing="false" onMouseClicked="#handleAttackButton1" prefHeight="62.0" prefWidth="128.0" text="ATTACK" />
       <Button fx:id="attackButton2" layoutX="88.0" layoutY="626.0" mnemonicParsing="false" onMouseClicked="#handleAttackButton2" prefHeight="62.0" prefWidth="128.0" text="ATTACK" />
       <Button fx:id="attackButton3" layoutX="90.0" layoutY="715.0" mnemonicParsing="false" onMouseClicked="#handleAttackButton3" prefHeight="62.0" prefWidth="128.0" text="ATTACK" />
-      <Button fx:id="defenceButton2" layoutX="758.0" layoutY="686.0" mnemonicParsing="false" onMouseClicked="#handleButtonDefence2" prefHeight="62.0" prefWidth="128.0" text="DEFENCE" />
-      <Button fx:id="defenceButton1" layoutX="758.0" layoutY="566.0" mnemonicParsing="false" onMouseClicked="#handleButtonDefence1" prefHeight="62.0" prefWidth="128.0" text="DEFENCE" />
-      <Button fx:id="test" layoutX="706.0" layoutY="453.0" mnemonicParsing="false" onMouseClicked="#handleServerResponse" text="Button" />
+      <Button fx:id="defenceButton2" layoutX="739.0" layoutY="659.0" mnemonicParsing="false" onMouseClicked="#handleButtonDefence2" prefHeight="62.0" prefWidth="128.0" text="DEFENCE" />
+      <Button fx:id="defenceButton1" layoutX="739.0" layoutY="537.0" mnemonicParsing="false" onMouseClicked="#handleButtonDefence1" prefHeight="62.0" prefWidth="128.0" text="DEFENCE" />
+      <TextArea fx:id="attack2Description" layoutX="283.0" layoutY="628.0" prefHeight="62.0" prefWidth="372.0" />
+      <TextArea fx:id="attack3Description" layoutX="283.0" layoutY="717.0" prefHeight="62.0" prefWidth="372.0" />
+      <TextArea fx:id="defence1Description" layoutX="886.0" layoutY="537.0" prefHeight="92.0" prefWidth="333.0" />
+      <TextArea fx:id="defence2Description" layoutX="887.0" layoutY="657.0" prefHeight="92.0" prefWidth="333.0" />
+      <Label fx:id="userName1" layoutX="78.0" layoutY="37.0" prefHeight="48.0" prefWidth="115.0" text="Username" />
+      <Label fx:id="userName2" layoutX="1002.0" layoutY="37.0" prefHeight="48.0" prefWidth="115.0" text="Username" />
    </children>
 </AnchorPane>
